NSDUH real cleaning

--- a/Reading Data From the Web.Rmd
+++ b/Reading Data From the Web.Rmd
@@ -65,6 +65,53 @@ nsduh_df <-
   slice(-1) #get rid of 1st row
 ```
 
+now do the tidying...
+
+```{r}
+marj_df <- 
+  nsduh_df %>% 
+  select(-contains("P Value")) %>% 
+  pivot_longer(
+    -State,
+    names_to = "age_year",
+    values_to = "percent"
+  ) %>% 
+  separate(age_year, into = c("age", "year"), sep = "\\(") %>% 
+  mutate(
+    year = str_remove(year, "\\)"),
+    percent = str_remove(percent, "[a-c]$"),
+    percent = as.numeric(percent)
+  ) %>% 
+  filter(
+    !(State %in% c("Total U.S.", "Northeast", "Midwest", "South", "West"))
+  )
+```
+
+Let's make a quick plot
+
+```{r}
+marj_df %>% 
+  filter(age == "12-17") %>% 
+  ggplot(aes(x = State, y = percent, color = year)) +
+  geom_point() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+```
+
+```{r}
+marj_df %>% 
+  filter(age == "12-17") %>% 
+  mutate(State = fct_reorder(State, percent)) %>% 
+  ggplot(aes(x = State, y = percent, color = year)) +
+  geom_point() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+```
+
+
+
+
+
+
+
 pull out the nth table
 ```{r}
 drug_use_html %>% 
